--- a/Biblio.bib
+++ b/Biblio.bib
@@ -183,6 +183,19 @@ year = {2018}
 % Fracture --------------------------------------------
 %------------------------------------------------------
 
+@article{LIM_1993,
+title = "Stress intensity factors for semi-circular specimens under three-point bending",
+journal = "Engineering Fracture Mechanics",
+volume = "44",
+number = "3",
+pages = "363 - 382",
+year = "1993",
+issn = "0013-7944",
+doi = "https://doi.org/10.1016/0013-7944(93)90030-V",
+url = "http://www.sciencedirect.com/science/article/pii/001379449390030V",
+author = "I.L. Lim and I.W. Johnston and S.K. Choi"
+}
+
 @article{Wang2017,
 title = "A unified variational eigen-erosion framework for interacting brittle fractures and compaction bands in fluid-infiltrating porous media",
 journal = "Computer Methods in Applied Mechanics and Engineering",
